<resources>
    <string name="app_name">entrepreneur</string>
    <string name="profile">username</string>
    <string name="hello">Personal Details-</string>
    <string name="hell">Professional Details-</string>
    <string name="name">Name</string>
    <string name="dob">DOB</string>
    <string name="company_name">Company Name</string>
    <string name="about_company">About Company</string>
    <string name="location_of_company">Location of Company</string>
    <string name="mailid">Mail_id</string>
    <string name="mobile_number">Mobile number</string>
    <string name="fullname">FullName</string>
    <string name="Profession">Designation</string>
    <string name="save">SAVE</string>
    <string name="about">About</string>
    <string name="city">State/City</string>
</resources>
