<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/gradientbackground"
        android:orientation="vertical">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="100dp"
            android:src='@drawable/profile'
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="10"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="2dp"
            android:text="@string/profile"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hello"
                android:textColor="#FF4081"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText3"
                    android:textSize="15sp"
                    android:ems="10"
                    android:hint="@string/dob"
                    android:inputType="date" />

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText10"
                    android:textSize="15sp"
                    android:ems="10"
                    android:hint="@string/company_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText4"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="-1dp"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/about"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:textSize="15sp" />

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText5"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/city"
                    android:inputType="textPostalAddress" />

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText6"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/mailid"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText8"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/mobile_number"
                    android:inputType="phone" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hell"
                android:textColor="#FF4081"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/fullname"
                    android:inputType="textPersonName" />

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText11"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/Profession"
                    android:inputType="textPersonName" />

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText12"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/company_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText13"
                    android:ems="10"
                    android:textSize="15sp"
                    android:gravity="top"
                    android:hint="@string/about_company"
                    android:inputType="textMultiLine"
                    android:lines="5" />

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText14"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/mailid"
                    android:inputType="textPostalAddress" />

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:id="@+id/editText16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText15"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/mobile_number"
                    android:inputType="phone" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText16"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:textAlignment="gravity"
                    android:textSize="22sp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/button_bg"
                    android:gravity="center"
                    android:text="@string/save"
                    android:layout_marginBottom="10dp"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>